--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -299,6 +299,103 @@ body{
   </p>
 </section>
 
+<section class="card" id="niko-dossier">
+  <div class="card__title">ASSOCIATE PROFILE — NIKO // NIGHT CITY</div>
+
+  <div class="evidence" style="margin-top:10px">
+    <div class="evidence__cap mono">
+      SOURCE: CORP INTELLIGENCE DIGEST // ACCESS: LIMITED
+    </div>
+  </div>
+
+  <ul class="kvlist" style="margin-top:14px">
+    <li><span>Статус</span><b>Актив</b></li>
+    <li><span>Специализация</span><b>Тактика / планирование операций</b></li>
+    <li><span>Связь с субъектом</span><b>Оперативное взаимодействие (неформальное)</b></li>
+    <li><span>Район активности</span><b>Japantown / Westbrook</b></li>
+  </ul>
+
+  <hr class="sep">
+
+  <div class="log mono">
+    <div>[REF] OPERATION: FIXER DISRUPTION — JAPANTOWN</div>
+    <div>[DATE] 2077-██-██ // STATUS: COMPLETED</div>
+  </div>
+
+  <p style="margin-top:14px">
+    В ходе независимой операции субъект NIKO разработал и реализовал план
+    дестабилизации влияния фиксера <span class="redact is-static">WAKAKO OKADA</span>
+    на территории Japantown.
+  </p>
+
+  <p>
+    Операция включала:
+  </p>
+
+  <ul>
+    <li>дезинформацию через посредников;</li>
+    <li>разрыв цепочек найма;</li>
+    <li>провокацию конфликта между аффилированными группами;</li>
+    <li>точечное силовое вмешательство.</li>
+  </ul>
+
+  <p>
+    В ходе операции фиксёр был устранён.
+    Официальная версия — внутренняя криминальная эскалация.
+  </p>
+
+  <hr class="sep">
+
+  <div class="log mono">
+    <div>[IMPACT ASSESSMENT]</div>
+  </div>
+
+  <ul class="kvlist" style="margin-top:10px">
+    <li><span>Tygers Claws</span><b class="warn">Потеря влияния / фрагментация</b></li>
+    <li><span>Territory Control</span><b>Нестабильность (3–5 недель)</b></li>
+    <li><span>Ninth Circle</span><b class="ok">Рост присутствия</b></li>
+  </ul>
+
+  <p style="margin-top:14px">
+    Освободившееся место фиксера было занято альтернативным посредником,
+    не связанным с предыдущими структурами контроля.
+  </p>
+
+  <p class="muted">
+    *Примечание: смена фиксера привела к перераспределению потоков заказов
+    и ослаблению монополии Tiger Claws в районе.*
+  </p>
+
+  <hr class="sep">
+
+  <div class="note">
+    <div class="note__title mono">АНАЛИТИЧЕСКАЯ ПОМЕТКА</div>
+    <div class="note__body">
+      Действия NIKO демонстрируют высокий уровень стратегического мышления.
+      Предпочитает непрямые методы и минимизацию публичного шума.
+    </div>
+  </div>
+
+  <p style="margin-top:14px">
+    Взаимодействие с субъектом Эллис Вейл оценивается как взаимовыгодное.
+    Прямой иерархии не зафиксировано.
+  </p>
+
+  <p>
+    Рекомендация:
+    <span class="pill">НАБЛЮДЕНИЕ</span>
+    <span class="pill">НЕ ВМЕШИВАТЬСЯ</span>
+  </p>
+</section>
+
+      <section class="card" id="incident">
+  <div class="card__title">АВТОМОБИЛЬ</div>
+
+  <p class="muted">
+    В настоящее вреям трансопртное средство, зарегистрированное на владельца - Нико Васкез, было перекрашено при помощи субъектов Ирен и Агата. Стиль огонь и "хайп"
+  </p>
+</section>
+
       
       <section class="card" id="notes">
         <div class="card__title">ПОЛЕВЫЕ ЗАМЕТКИ</div>
