--- a/iren.html
+++ b/iren.html
@@ -300,8 +300,8 @@
   <div class="card__title">НЕЗАРЕГИСТРИРОВАННЫЙ ИНЦИДЕНТ</div>
 
   <p class="muted">
-    Субъектом был создан "Кастомный" объект интеръера - ковёр для её друга - Нико Васкез.</br>
-  Результат: НЕКОТОРОЕ ЗАМЕШАТЕЛЬСТВО СУБЪЕКТА НИКО.
+  Субъектом был создан "Кастомный" объект интерьера - ковёр для её друга Нико Васкеза.</br>
+  Результат: НЕКОТОРОЕ ЗАМЕШАТЕЛЬСТВО СУБЪЕКТА НИКО. ИСКРЕННЕЕ УДИВЛЕНИЕ ОСТАЛЬНЫХ АФФИЛИРОВАННЫХ ЛИЦ.
   </p>
   
 </section>
