--- a/nightcity.html
+++ b/nightcity.html
@@ -217,8 +217,10 @@
       Я искал место, где можно не умереть сразу.
     </div>
   </div>
+</section>
 
-  <hr class="sep">
+    <section class="card" id="nightcity1">
+<hr class="sep">
 
   <h3 class="h">ФИНАНСИРОВАНИЕ ВЫЖИВАНИЯ</h3>
   <p>
@@ -330,8 +332,7 @@
       Я пытаюсь, чтобы кто-то другой не стал таким, как я.
     </div>
   </div>
-</section>
-
+    </section>
     
   <!-- навигация -->
   <div class="nav-archive">
