--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -310,8 +310,8 @@ body{
 
   <ul class="kvlist" style="margin-top:14px">
     <li><span>Статус</span><b>Актив</b></li>
-    <li><span>Специализация</span><b>Тактика / планирование операций</b></li>
-    <li><span>Связь с субъектом</span><b>Оперативное взаимодействие (неформальное)</b></li>
+    <li><span>Специализация</span><b>Полевой сотрудник / планирование операций</b></li>
+    <li><span>Связь с субъектом</span><b>Оперативное взаимодействие</b></li>
     <li><span>Район активности</span><b>Japantown / Westbrook</b></li>
   </ul>
 
@@ -319,13 +319,13 @@ body{
 
   <div class="log mono">
     <div>[REF] OPERATION: FIXER DISRUPTION — JAPANTOWN</div>
-    <div>[DATE] 2077-██-██ // STATUS: COMPLETED</div>
+    <div>[DATE] 2078-██-██ // STATUS: COMPLETED</div>
   </div>
 
   <p style="margin-top:14px">
-    В ходе независимой операции субъект NIKO разработал и реализовал план
-    дестабилизации влияния фиксера <span class="redact is-static">WAKAKO OKADA</span>
-    на территории Japantown.
+    В ходе независимой операции субъект Нико с аффилированными разработали и реализовали план
+    дестабилизации влияния фиксера <span class="redact is-static">ВАКАКО ОКАДА</span>
+    на территории ДЖАПАН-ТАУН
   </p>
 
   <p>
@@ -333,7 +333,7 @@ body{
   </p>
 
   <ul>
-    <li>дезинформацию через посредников;</li>
+    <li>захват боссов когтей;</li>
     <li>разрыв цепочек найма;</li>
     <li>провокацию конфликта между аффилированными группами;</li>
     <li>точечное силовое вмешательство.</li>
@@ -341,7 +341,7 @@ body{
 
   <p>
     В ходе операции фиксёр был устранён.
-    Официальная версия — внутренняя криминальная эскалация.
+    Официальная версия - внутренняя криминальная эскалация.
   </p>
 
   <hr class="sep">
@@ -351,9 +351,9 @@ body{
   </div>
 
   <ul class="kvlist" style="margin-top:10px">
-    <li><span>Tygers Claws</span><b class="warn">Потеря влияния / фрагментация</b></li>
+    <li><span>Тигриные Когтиs</span><b class="warn">Потеря влияния / фрагментация</b></li>
     <li><span>Territory Control</span><b>Нестабильность (3–5 недель)</b></li>
-    <li><span>Ninth Circle</span><b class="ok">Рост присутствия</b></li>
+    <li><span>Девятый Круг</span><b class="ok">Рост присутствия</b></li>
   </ul>
 
   <p style="margin-top:14px">
@@ -363,7 +363,7 @@ body{
 
   <p class="muted">
     *Примечание: смена фиксера привела к перераспределению потоков заказов
-    и ослаблению монополии Tiger Claws в районе.*
+    и ослаблению монополии Тигриных Когтей в районе.*
   </p>
 
   <hr class="sep">
@@ -371,15 +371,9 @@ body{
   <div class="note">
     <div class="note__title mono">АНАЛИТИЧЕСКАЯ ПОМЕТКА</div>
     <div class="note__body">
-      Действия NIKO демонстрируют высокий уровень стратегического мышления.
-      Предпочитает непрямые методы и минимизацию публичного шума.
+      Действия Нико демонстрируют высокий уровень лидерского  мышления.
     </div>
   </div>
-
-  <p style="margin-top:14px">
-    Взаимодействие с субъектом Эллис Вейл оценивается как взаимовыгодное.
-    Прямой иерархии не зафиксировано.
-  </p>
 
   <p>
     Рекомендация:
