--- a/nightcity.html
+++ b/nightcity.html
@@ -202,19 +202,14 @@
   </div>
 
   <p style="margin-top:14px">
-    Иногда мне кажется, что вся моя жизнь здесь — цепочка случайных совпадений, которые я называю решениями.
-  </p>
-
-  <p>
-    Я не герой. Не жертва. Не легенда. Я просто всё ещё здесь.
-    И, значит, пока что — жив.
+    Иногда мне кажется, что вся моя жизнь здесь - цепочка случайных совпадений, которые я называю решениями.
   </p>
 
   <div class="note" style="margin-top:12px">
     <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
     <div class="note__body">
-      Я не искал новую жизнь.<br>
-      Я искал место, где можно не умереть сразу.
+      Я не искал новую жизнь и не искал смерть.<br>
+      Я искал место, где можно не умереть здесь и сейчас... пока...
     </div>
   </div>
 </section>
@@ -229,14 +224,14 @@
   </p>
 
   <div class="kvlist" style="margin-top:10px">
-    <div class="kvrow"><span>CHANNEL</span><b class="mono">LEAK NEWS (3RD PARTY)</b></div>
-    <div class="kvrow"><span>ASSET</span><b class="mono">LATAM LOGS / ROUTES / NAMES</b></div>
-    <div class="kvrow"><span>RETURN</span><b class="mono">EMERGENCY CYBERCARE + LATER BIOSCULPT</b></div>
-    <div class="kvrow"><span>BENEFIT</span><b class="mono">DISAPPEARANCE / NEW ID / ROUTING</b></div>
+    <div class="kvrow"><span>CHANNEL</span><b class="mono"> LEAK NEWS (3RD PARTY)</b></div>
+    <div class="kvrow"><span>ASSET</span><b class="mono"> LATAM LOGS / ROUTES / NAMES</b></div>
+    <div class="kvrow"><span>RETURN</span><b class="mono"> EMERGENCY CYBERCARE + LATER BIOSCULPT</b></div>
+    <div class="kvrow"><span>BENEFIT</span><b class="mono"> DISAPPEARANCE / NEW ID / ROUTING</b></div>
   </div>
 
   <p class="muted" style="margin-top:10px">
-    Примечание: сделка классифицируется как вынужденная. Субъект выступает не «информатором», а разменным ресурсом.
+    Примечание: сделка классифицируется как вынужденная. Субъект выступает не "информатором", а разменным ресурсом.
   </p>
 
   <hr class="sep">
@@ -244,16 +239,16 @@
   <h3 class="h">ВСТРЕЧА С АЯКСОМ</h3>
   <ul class="list">
     <li>Контакт с прошлым, которое субъект считал похороненным.</li>
-    <li>Манипуляции и давление, проверка на лояльность.</li>
-    <li>Убийства «по приказу» + молчаливое согласие → первый серьёзный надлом.</li>
-    <li>Фиксация утраты морального компаса: граница «выживание / соучастие» размыта.</li>
+    <li>Манипуляции и давление.</li>
+    <li>Убийства по приказу" + молчаливое согласие → первый серьёзный надлом.</li>
+    <li>Фиксация утраты морального компаса: граница !выживание / соучастие! размыта.</li>
   </ul>
 
   <div class="note" style="margin-top:12px">
     <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
     <div class="note__body">
-      Он не заставлял.<br>
-      Он просто напоминал, что выбор — всегда мой.
+      СУКА МЕНЯ НИКТО НЕ ЗАСТАВЛЯЛ.<br>
+      Он просто напоминал, что выбор даётся только сильным.
     </div>
   </div>
 
@@ -270,7 +265,7 @@
 
   <h3 class="h">БОЙНЯ С ВАКАКО</h3>
   <ul class="list">
-    <li>Высокая плотность контакта: «минуты» → «десятки» смертей.</li>
+    <li>Высокая плотность контакта: "минуты" → "десятки" смертей.</li>
     <li>Поведение: профессиональная холодная эффективность (тактика, гранаты, контроль пространства).</li>
     <li>После: выраженная пустота, фиксация факта нормализации насилия.</li>
   </ul>
@@ -278,8 +273,8 @@
   <div class="note" style="margin-top:12px">
     <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
     <div class="note__body">
-      Я делал всё правильно.<br>
-      Поэтому стало страшно.
+      В этом была необходимость. Либо мы, либо нас.<br>
+      Горы трупов и проще не становится.
     </div>
   </div>
 
@@ -288,27 +283,27 @@
   <h3 class="h">БУНКЕР</h3>
   <ul class="list">
     <li>Точка давления, моральная развилка.</li>
-    <li>Субъект подставил людей ради общей цели. Прощён внешне — не прощён внутренне.</li>
+    <li>Субъект подставил людей с желанеим защитить окружающих. Прощён внешне 0 не прощён внутренне.</li>
   </ul>
 
   <hr class="sep">
 
   <h3 class="h">РИГЕЛЬ</h3>
   <ul class="list">
-    <li>Схожесть одиночества и роли «функции».</li>
+    <li>Схожесть одиночества и роли "функции".</li>
     <li>Субъект помогал без требования доверия.</li>
-    <li>Просьба о помощи → ранение Ригеля → усиление страха близости и ответственности.</li>
-    <li>Субъект стремится помогать «как человек», а не как корпструктура.</li>
+    <li>Просьба о помощи → ранение Ригель → усиление страха близости и ответственности.</li>
+    <li>Субъект стремится помогать "как человек", а не как корпструктура.</li>
   </ul>
 
   <hr class="sep">
 
   <h3 class="h">НАРАСТАЮЩИЙ СТРЕСС / ПРОФИЛЬ РИСКА</h3>
   <div class="kvlist" style="margin-top:10px">
-    <div class="kvrow"><span>MODE</span><b class="mono">TILT (NO HYSTERIA)</b></div>
-    <div class="kvrow"><span>MARKERS</span><b class="mono">ANXIETY / DYSREGULATION / WORK-ESCAPE</b></div>
-    <div class="kvrow"><span>DECISIONS</span><b class="mono">IMPULSIVE SPIKES</b></div>
-    <div class="kvrow"><span>CYBERPSYCHOSIS</span><b class="mono warn">SCREENING: INCONCLUSIVE</b></div>
+    <div class="kvrow"><span>MODE</span><b class="mono"> TILT (NO HYSTERIA)</b></div>
+    <div class="kvrow"><span>MARKERS</span><b class="mono"> ANXIETY / DYSREGULATION / WORK-ESCAPE</b></div>
+    <div class="kvrow"><span>DECISIONS</span><b class="mono"> IMPULSIVE SPIKES</b></div>
+    <div class="kvrow"><span>CYBERPSYCHOSIS</span><b class="mono warn"> SCREENING: INCONCLUSIVE</b></div>
   </div>
 
   <p class="muted" style="margin-top:10px">
@@ -319,8 +314,7 @@
 
   <h3 class="h">КЛИНИКА</h3>
   <ul class="list">
-    <li>Первый раз субъект попросил помощи у команды.</li>
-    <li>Риск (деньги/репутация/связи) — ради обычных людей, не ради статуса.</li>
+    <li>Риск (деньги/репутация/связи) - ради обычных людей, не ради статуса.</li>
     <li>Здание связано с прошлым насилием субъекта (символическое давление).</li>
     <li>Не искупление: попытка не дать злу повториться.</li>
   </ul>
@@ -328,8 +322,11 @@
   <div class="note" style="margin-top:12px">
     <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
     <div class="note__body">
-      Я не пытаюсь стать «хорошим».<br>
-      Я пытаюсь, чтобы кто-то другой не стал таким, как я.
+     Я просто хочу быть свободным... может близости<br>
+      Я пытаюсь, чтобы кто-то другой не стал таким, как я.<br>
+    
+    Я думал что особенный. Но это лишь плод системы, который разыграл одну из карт. Я был картой, а не особенным.
+ 
     </div>
   </div>
     </section>
