--- a/archive1.html
+++ b/archive1.html
@@ -51,7 +51,7 @@
 
         <p>Ответственные сотрудники медицинской бригады зафиксировали состояние, но воздержались от вмешательства, ожидая подтверждения протокола и разрешения на экстренные действия от руководства "свыше".</p>
 
-        <p>Из-за продолжительного ожидания им не удалось оказать своевременную помощь, все вокруг лишь обсуждали возможные риски и правильность регламента. Все это время Эллис наблюдал как человек медленоно, но верно задыхался и просил помощи.</p>
+        <p>Из-за продолжительного ожидания им не удалось оказать своевременную помощь, все вокруг лишь обсуждали возможные риски и правильность регламента. Все это время Эллис наблюдал как человек медленоно, но верно задыхался, в то время как его сын просил помощи вокруг.</p>
 
         <p>События того дня сильно отпечаталось в его памяти как первый опыт столкновения с приоритетом сохранения процедур, чем важности жизни.</p>
 
