--- a/archive1.html
+++ b/archive1.html
@@ -77,11 +77,11 @@
 <p><b>Отец</b><br>
 
 Имя: <b>Адриан Вэйл</b><br>
-Специализация: полевой медицинский специалист / биомедицинский подрядчик<br>
+Специализация: полевой медицинский специалист / соло<br>
 Корпоративные связи: внешние контракты (в т.ч. Night City, частные медико-военные структуры)</p>
 
 <p>Адриан Вэйл длительное время работал в зонах повышенного риска, включая регионы за пределами Европы.
-Имеются данные о сотрудничестве с частными медицинскими и силовыми подразделениями в Night City в ранний период карьеры.<br>
+Имеются данные о сотрудничестве с частными медицинскими и силовыми подразделениями в Night City в ранний период карьеры (Lazarus).<br>
 
 Отличительные черты:<br>
         <ul class="list">
@@ -95,8 +95,7 @@
 <p><b>Мать</b><br>
 
 Имя: <b>Петра Вэйл</b><br>
-Специализация: биоаналитика / фармацевтические исследования<br>
-Роль в семье: координация, стратегические решения, образовательная среда<br></p>
+Специализация: биоаналитика / фармацевтические исследования<br></p>
 
 <p>Петра Вэйл принимала участие в клинических и исследовательских проектах, связанных с биологической совместимостью и адаптацией имплантов.<br>
 Поддерживала карьерные решения, ориентированные на стабильность и доступ к ресурсам.</p>
@@ -132,23 +131,6 @@
         </div>
       </section>
 
-      <section class="card" id="pre">
-        <div class="card__title">ПРЕДВАРИТЕЛЬНЫЕ ИНЦИДЕНТЫ (КРАТКО)</div>
-
-        <ul class="list">
-          <li>первый пациент с летальным исходом</li>
-          <li>первый зафиксированный эмоциональный блок</li>
-          <li>первый осознанный выбор скорости вместо сопереживания</li>
-        </ul>
-
-        <div class="note">
-          <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
-          <div class="note__body">
-            //////<br>
-            /////
-          </div>
-        </div>
-      </section>
 
   <!-- навигация -->
   <div class="nav-archive">
