--- a/field.html
+++ b/field.html
@@ -47,9 +47,8 @@
   </div>
 
   <div class="evidence__cap mono">
-    VIDEO EXTRACT // OFF-REGISTRY RELIEF<br>
-    DATE: 2074-08-22 // SOURCE: STREET POLE CAM NODE 12 (LATAM)<br>
-    AUDIO: UNAVAILABLE // LOCATION: REDACTED
+    ВИЗУАЛИЗАЦИЯ ПРОИСХДЯЩЕГО (думаю понятно где Эллис)<br>
+    AUDIO: AVAILABLE // LOCATION: REDACTED
   </div>
 </div>
 
@@ -57,6 +56,66 @@
   <p><span class="pill">ФОРМАЛЬНО</span> гуманитарная и эвакуационная миссия: медсопровождение, помощь гражданским, стабилизация.</p>
   <p><span class="pill">ФАКТИЧЕСКИ</span> вывод агентов, сбор информации, экстренная эвакуация активов.</p>
 
+<p>Эллис был включён в группу как полевой медик, без командных полномочий.
+Его задача была простой:
+поддерживать живучесть команды и гражданских, пока операция не будет завершена.</p>
+  <p>В группе был человек -
+почти лучший друг. Они часто работали в паре:
+разговоры между задачами, взаиомопощь, чёрный юмор.
+Доверие, выработанное под давлением.</p>
+
+ <p>Срыв операции<br>
+
+Засада была резкой и грязной.
+Без красивых манёвров - ближний бой и тесные коридоры. Стрельба, где решения принимаются быстрее, чем приходит мысль.<br>
+
+Это не была бойня ради бойни.
+Стреляли по вооружённым целям.
+Но жестокость всё равно была -
+быстрая, хладнокровная, эффективная.<br>
+
+Эллис:<br>
+-работал на автомате<br>
+-стабилизировал раненых<br>
+-вытаскивал тех, кого можно было спасти<br>
+
+Но в какой-то момент -
+он остановился.
+Не от страха.
+От перегруза.<br>
+
+Слишком много криков.
+Слишком много тел.
+Слишком много решений, где помочь - значит подставить других.<br>
+
+Человек, с которым Эллис работал рядом,
+взял на себя самое грязное -
+отвлёк огонь, закрыл отход, дал Эллису уйти с данными.<br><br>
+
+Его позже задержали спецслужбы.
+Или убили.
+Или он всё ещё где-то живёт под другим именем.<br>
+
+Точной информации нет.
+И, возможно, никогда не будет.<br>
+
+Последствия<br>
+Эллис вернулся.<br>
+Передал данные.<br>
+Операция была признана успешной.<br>
+Корпорация это оценила.<br>
+
+
+С этого момента:<br>
+Эллиса начали брать в задачи выше уровнем
+
+его допустили к более чувствительной информации
+
+он стал не просто медиком, а частью агентской сети
+
+Он сам считал, что ничего не сделал.
+Но система решила иначе.</p>
+  
   <div class="note">
     <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
     <div class="note__body">
