--- a/education.html
+++ b/education.html
@@ -54,7 +54,7 @@
 
   <p>
     Формально программа классифицировалась как образовательная.
-    Фактически — как система фильтрации и отбора персонала.
+    Фактически - как система фильтрации и отбора персонала.
   </p>
 
   <p>
@@ -134,9 +134,8 @@
   <div class="note">
     <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
     <div class="note__body">
-      Он не провалил экзамен.<br>
-      Экзамен провалил его.<br><br>
-      Просто так было удобнее записать.
+      Он не сдал? Что?... Где он сейчас?<br>
+    
     </div>
   </div>
 
@@ -203,7 +202,7 @@
     <div class="note__body">
       Я сделал всё, что мог.<br>
       И этого оказалось недостаточно.<br><br>
-      Впервые я понял, что старание не гарантирует результата.
+      Впервые я понял, что старания не гарантирует результата.
     </div>
   </div>
 
@@ -243,10 +242,9 @@
     <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
     <div class="note__body">
       В прошлый раз я держал его за руку до конца.<br>
-      В этот раз — я просто посмотрел на показатели
+      В этот раз - я просто посмотрел на показатели
       и переключился на следующего.<br><br>
-      Меня за это не наказали.<br>
-      Меня за это похвалили.
+  Так будет правильнее.
     </div>
   </div>
 
