--- a/field.html
+++ b/field.html
@@ -56,65 +56,143 @@
   <p><span class="pill">ФОРМАЛЬНО</span> гуманитарная и эвакуационная миссия: медсопровождение, помощь гражданским, стабилизация.</p>
   <p><span class="pill">ФАКТИЧЕСКИ</span> вывод агентов, сбор информации, экстренная эвакуация активов.</p>
 
-<p>Эллис был включён в группу как полевой медик, без командных полномочий.
-Его задача была простой:
-поддерживать живучесть команды и гражданских, пока операция не будет завершена.</p>
-  <p>В группе был человек -
-почти лучший друг. Они часто работали в паре:
-разговоры между задачами, взаиомопощь, чёрный юмор.
-Доверие, выработанное под давлением.</p>
+<p>
+    Эллис был включён в оперативную группу как полевой медицинский специалист,
+    без доступа к командным решениям.
+    Его задача формулировалась просто:
+    поддерживать живучесть команды и гражданских до завершения операции.
+  </p>
 
- <p>Срыв операции<br>
+  <hr class="sep">
 
-Засада была резкой и грязной.
-Без красивых манёвров - ближний бой и тесные коридоры. Стрельба, где решения принимаются быстрее, чем приходит мысль.<br>
+  <p>
+    В составе группы присутствовал оперативник,
+    с которым субъект регулярно работал в паре.
+    Формальных связей не зафиксировано.
+  </p>
 
-Это не была бойня ради бойни.
-Стреляли по вооружённым целям.
-Но жестокость всё равно была -
-быстрая, хладнокровная, эффективная.<br>
+  <p>
+    Взаимодействие включало:
+  </p>
 
-Эллис:<br>
--работал на автомате<br>
--стабилизировал раненых<br>
--вытаскивал тех, кого можно было спасти<br>
+  <ul class="list">
+    <li>краткие разговоры между задачами;</li>
+    <li>взаимопомощь в полевых условиях;</li>
+    <li>чёрный юмор как способ снижения напряжения.</li>
+  </ul>
 
-Но в какой-то момент -
-он остановился.
-Не от страха.
-От перегруза.<br>
+  <p>
+    Доверие между ними сформировалось под давлением.
+  </p>
 
-Слишком много криков.
-Слишком много тел.
-Слишком много решений, где помочь - значит подставить других.<br>
+  <hr class="sep">
 
-Человек, с которым Эллис работал рядом,
-взял на себя самое грязное -
-отвлёк огонь, закрыл отход, дал Эллису уйти с данными.<br><br>
+  <div class="log mono">
+    <div>[INCIDENT] OPERATION FAILURE</div>
+    <div>[MODE] CLOSE QUARTERS COMBAT</div>
+  </div>
 
-Его позже задержали спецслужбы.
-Или убили.
-Или он всё ещё где-то живёт под другим именем.<br>
+  <p style="margin-top:14px">
+    Срыв операции произошёл внезапно.
+    Засада была резкой и неструктурированной.
+    Без манёвров и тактической глубины -
+    ближний бой, тесные коридоры, ограниченная видимость.
+  </p>
 
-Точной информации нет.
-И, возможно, никогда не будет.<br>
+  <p>
+    Огонь вёлся по вооружённым целям.
+    Бойня не являлась самоцелью,
+    однако применяемое насилие было:
+    быстрым, хладнокровным и эффективным.
+  </p>
 
-Последствия<br>
-Эллис вернулся.<br>
-Передал данные.<br>
-Операция была признана успешной.<br>
-Корпорация это оценила.<br>
+  <hr class="sep">
 
+  <p>
+    Действия субъекта в ходе инцидента:
+  </p>
 
-С этого момента:<br>
-Эллиса начали брать в задачи выше уровнем
+  <ul class="list">
+    <li>функционирование в автоматическом режиме;</li>
+    <li>стабилизация раненых;</li>
+    <li>эвакуация тех, чьё спасение оставалось возможным.</li>
+  </ul>
 
-его допустили к более чувствительной информации
+  <p>
+    На определённом этапе субъект прекратил активные действия.
+    Причина: перегрузка.
+  </p>
 
-он стал не просто медиком, а частью агентской сети
+  <p>
+    Зафиксированы признаки сенсорного перенасыщения:
+  </p>
 
-Он сам считал, что ничего не сделал.
-Но система решила иначе.</p>
+  <ul class="list">
+    <li>чрезмерное количество криков;</li>
+    <li>массовые потери;</li>
+    <li>повторяющиеся ситуации, где помощь одному
+        увеличивала риск для других.</li>
+  </ul>
+
+  <hr class="sep">
+
+  <p>
+    Оперативник, с которым субъект работал в паре,
+    взял на себя прикрытие отхода:
+  </p>
+
+  <ul class="list">
+    <li>отвлёк основной огонь;</li>
+    <li>закрыл направление преследования;</li>
+    <li>обеспечил выход субъекта с данными.</li>
+  </ul>
+
+  <p>
+    Дальнейшая судьба оперативника не установлена.
+    Возможные версии:
+  </p>
+
+  <ul class="list">
+    <li>задержан спецслужбами;</li>
+    <li>ликвидирован;</li>
+    <li>продолжает существование под иной идентичностью.</li>
+  </ul>
+
+  <p class="muted">
+    Подтверждённых данных нет.
+    Вероятность восстановления информации - низкая.
+  </p>
+
+  <hr class="sep">
+
+  <div class="log mono">
+    <div>[AFTERMATH]</div>
+  </div>
+
+  <p>
+    Субъект вернулся.
+    Передал полученные данные.
+    Операция была признана успешной.
+  </p>
+
+  <p>
+    Корпорация зафиксировала результат.
+  </p>
+
+  <p>
+    С этого момента:
+  </p>
+
+  <ul class="list">
+    <li>субъекта начали привлекать к задачам более высокого уровня;</li>
+    <li>ему был открыт доступ к чувствительной информации;</li>
+    <li>роль расширилась за пределы медицинского сопровождения.</li>
+  </ul>
+
+  <p>
+    Формально он оставался медиком.
+    Фактически - стал частью агентской сети.
+  </p>
   
   <div class="note">
     <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
@@ -139,7 +217,7 @@
   <hr>
 
   <p>
-    После разрушения экспедиционной группы и потери командной структуры
+    После разрушения экспедиционной группы в джуншлях Бразилии и потери командной структуры
     субъект действовал автономно в условиях радиоактивного заражения,
     биологических аномалий и постоянной угрозы.
   </p>
@@ -165,9 +243,9 @@
     <div class="note__body">
       День неизвестен.<br>
       Счётчик трещит почти постоянно.<br>
-      Я перестал различать, где фон, а где опасно.<br><br>
+      Я перестал различать, где фон и где опасно.<br><br>
 
-      Джунгли здесь не зелёные — они ржавые.<br>
+      Джунгли здесь не зелёные - они ржавые.<br>
       Всё пахнет гнилью и озоном.<br><br>
 
       Импланты начали отказывать один за другим.<br>
@@ -182,7 +260,7 @@
       Импланты подошли.<br>
       Старые. Не идеальные. Но рабочие.<br><br>
 
-      Каждый эдди — это ещё один день жизни.<br>
+      сука сука сука сука<br>
       Я тогда выбрал жить.
     </div>
   </div>
@@ -195,21 +273,16 @@
     <div class="note__title mono">LOCAL RECORD // UNAUTHORIZED</div>
     <div class="note__body">
       Анестезии не было.<br>
-      Была только логика.<br><br>
-
-      Имплант перегревался — я видел это по цифрам.<br>
+      Имплант перегревался - я видел это по цифрам.<br>
       Разрез вышел неровный.<br><br>
 
-      Имплант несовместим. Частично.<br>
-      Но этого хватит.<br><br>
+      "Донорский" имплант почти несовместим.<br>
 
       Когда модуль встал на место —<br>
       мир на секунду погас.<br><br>
 
       Система стабилизирована.<br>
-      Ошибки допустимы.<br><br>
-
-      Работает — значит жив.
+      Ошибки допустимы.
     </div>
   </div>
 
@@ -219,7 +292,7 @@
 
   <ul class="list">
     <li>тяжёлое лучевое поражение</li>
-    <li>утрата конечностей</li>
+    <li>утрата конечностей и большей части кожи</li>
     <li>частичная потеря зрения</li>
     <li>повреждение нервной системы</li>
     <li>экстренная тотальная кибернетическая реконструкция</li>
@@ -239,15 +312,6 @@
     Источник средств не раскрыт.<br>
     Вероятно: утечка чувствительных данных через сторонние каналы.
   </p>
-
-  <div class="note">
-    <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
-    <div class="note__body">
-      Я больше не верю в невинность.<br>
-      Только в последствия.
-    </div>
-  </div>
-
 </section>
 
 <section class="card" id="voice-log-audio">
