--- a/nightcity.html
+++ b/nightcity.html
@@ -59,7 +59,7 @@
 
   <p style="margin-top:14px">
     LeakNews были единственным вариантом. Я отдал им больше, чем хотел. Больше, чем планировал.
-    Novimmune — имена, цепочки, логистика, внутренние отчёты. Всё, что когда-то называл «работой».
+    Novimmune - имена, цепочки, логистика, внутренние отчёты. Всё, что когда-то называл «работой».
   </p>
 
   <p>
@@ -73,16 +73,15 @@
   </div>
 
   <p style="margin-top:14px">
-    Первые месяцы — контракты. Мелкие. Грязные. Никакой романтики.
+    Первые месяцы - мелкие и грязыне контракты. Запах той самой свободы. Романтика бля.
   </p>
 
   <p>
-    Эджраннер. Слово звучит громче, чем есть на самом деле.
-    Это значит: ты полезный, ты заменимый, ты жив — пока нужен.
+    Эджраннер - слово то какое громкое, а на самом деле это значит: ты полезный, ты заменимый, ты жив - пока нужен. Хуеманитка это все
   </p>
 
   <p>
-    Я лечил, таскал, прикрывал, иногда — просто был рядом.
+    Я лечил, таскал, прикрывал, иногда - просто был рядом.
     Деньги уходили быстрее, чем приходили. Импланты держались на честном слове и костылях.
   </p>
 
@@ -94,19 +93,19 @@
   </div>
 
   <p style="margin-top:14px">
-    Потом стало хуже. Данные начали всплывать — не напрямую. Обрывками. Намёками.
-    Слишком много корпораций вдруг «узнали» обо мне.
+    Потом стало хуже. Данные начали всплывать - не напрямую. Обрывками. Намёками.
+    Слишком много корпораций вдруг "узнали" обо мне.
   </p>
 
   <p>
-    Если бы не Ирен — я бы даже не понял, что меня уже почти стерли.
-    Она и ЛикНью: подчистили хвосты, сломали цепочки, сожгли зеркала.
+    Если бы не Ирен - я бы даже не понял, что меня уже почти стерли.
+    Она и ЛикНьюс: подчистили хвосты, сломали цепочки, сожгли зеркала.
   </p>
 
   <div class="note" style="margin-top:12px">
     <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
     <div class="note__body">
-      Я тогда впервые понял, что один я здесь не выживу.
+      Я тогда впервые понял, что один я здесь не выживу. Спасибо вам.
     </div>
   </div>
 
@@ -123,7 +122,7 @@
   </p>
 
   <p>
-    Когда я увидел себя после — я ничего не почувствовал.
+    Когда я увидел себя после - я ничего не почувствовал.
     Ни радости. Ни отвращения. Просто: это больше не я. И, может быть, так лучше.
   </p>
 
@@ -135,7 +134,7 @@
   </div>
 
   <p style="margin-top:14px">
-    LeakNews… слишком много крика. Слишком много грязи. Каждый утюг орёт, каждый канал врёт по-своему.
+    От СМИ слишком много крика, грязи и мало толку. Каждый утюг орёт, каждый канал врёт по-своему.
     Я решил, что могу лучше. Тише. Точнее. Анонимно.
   </p>
 
@@ -147,13 +146,13 @@
   <div class="note" style="margin-top:12px">
     <div class="note__title mono">ЛИЧНАЯ ЗАПИСЬ</div>
     <div class="note__body">
-      А потом пришли.
+      А потом за мной и данными "пришли".
     </div>
   </div>
 
   <p style="margin-top:14px">
-    Инквизиторы. Они не ломали — они стирать умеют.
-    Базы нет. Архивов нет. И что хуже — все данные обо мне они забрали с собой.
+    Инквизиторы. Что-что, а стирать умеют. Особенно что касается лично их.
+    Базы нет. Архивов нет. И что хуже - все данные обо мне они забрали с собой.
   </p>
 
   <p class="muted">
@@ -169,28 +168,23 @@
 
   <p style="margin-top:14px">
     Контракт на слежку я сначала не воспринял всерьёз. Обычное промышленное наблюдение: Кэс Хэйвен.
-    Я не знал его. Он не знал меня.
+    Я не знал её. Она не знала меня.
   </p>
 
   <p>
-    Забавно, что в это же время ему пришёл заказ — следить за мной.
-    Мы оба об этом узнали позже.
+    Забавно, что в это же время ей пришёл заказ - следить за мной.
+    Мы оба об этом узнали позже...
   </p>
 
   <p>
-    Тогда была только засада. Мальстрем. Узкий квартал. Ошибка в тайминге.
-    Если бы не совместная работа — нас бы там и оставили.
-  </p>
-
-  <p>
-    Я стабилизировал его. Он прикрывал меня.
-    После — тишина. Два человека, которые должны были быть врагами, но слишком устали, чтобы продолжать эту игру.
+    Когда нас блять окружила толпа ебанных мальстрёмов. Узкий квартал. Ошибка в тайминге.
+    Если бы не совместная работа - нас бы знатно распидорило по асфальту, что мать родная не узнала.
   </p>
 
   <div class="note" style="margin-top:12px">
     <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
     <div class="note__body">
-      Слово за слово — и мы просто решили не стрелять друг в друга дальше.
+      Слово за слово - и мы просто решили не стрелять друг в друга дальше.
     </div>
   </div>
 
