--- a/nightcity.html
+++ b/nightcity.html
@@ -58,13 +58,13 @@
   </div>
 
   <p style="margin-top:14px">
-    LeakNews были единственным вариантом. Я отдал им больше, чем хотел. Больше, чем планировал.
-    Novimmune - имена, цепочки, логистика, внутренние отчёты. Всё, что когда-то называл «работой».
+    LeakNews были единственным вариантом. Мне сильно повезло встретить их полевого агента, но я так и не понял кто они и нахуя им это. Ладно. Я отдал им больше, чем хотел и чем планировал.
+    Novimmune - имена, цепочки, логистика, внутренние отчёты и все это говно. Всё, что когда-то называл «работой».
   </p>
 
   <p>
-    За это я получил: вход в город, первые необходимые импланты, и шанс не умереть в ближайшие недели.
-    Не сделку. Обмен воздуха на данные.
+    За это я получил: вход в город, первые необходимые импланты, и шанс не умереть в ближайшие недели - новые бля возможности.
+    Обмен воздуха на данные хах.
   </p>
 
   <div class="log mono" style="margin-top:14px">
@@ -73,7 +73,7 @@
   </div>
 
   <p style="margin-top:14px">
-    Первые месяцы - мелкие и грязыне контракты. Запах той самой свободы. Романтика бля.
+    Первые месяцы - мелкие и грязыне контракты. Улицы - продолжение сточных канав, а каналы заполнены бедностью. Запах той самой свободы. Романтика бля.
   </p>
 
   <p>
@@ -81,8 +81,8 @@
   </p>
 
   <p>
-    Я лечил, таскал, прикрывал, иногда - просто был рядом.
-    Деньги уходили быстрее, чем приходили. Импланты держались на честном слове и костылях.
+    Я лечил, таскал, прикрывал, иногда - просто был рядом. Ничего особого, даже проще чем было раньше. Но....
+    Деньги уходили быстрее, чем приходили. Импланты держались на честном слове и ПО постоянно отъёбывало. Как то пришел я к рипперу, а он говорит - че оно у тебя висит как чучело?
   </p>
 
   <hr class="sep">
@@ -93,13 +93,13 @@
   </div>
 
   <p style="margin-top:14px">
-    Потом стало хуже. Данные начали всплывать - не напрямую. Обрывками. Намёками.
+    Не уснули? А стало хуже... Данные начали всплывать - не напрямую, а обрывками про корпу хуё-маё.
     Слишком много корпораций вдруг "узнали" обо мне.
   </p>
 
   <p>
     Если бы не Ирен - я бы даже не понял, что меня уже почти стерли.
-    Она и ЛикНьюс: подчистили хвосты, сломали цепочки, сожгли зеркала.
+    Она и ЛикНьюс: подчистили хвосты, сломали цепочки, сожгли зеркала. Я им должен жпоу за спасение теперь. Хотя только Ирен... Она вроде ничего такая. Только француз...
   </p>
 
   <div class="note" style="margin-top:12px">
