--- a/nightcity.html
+++ b/nightcity.html
@@ -34,11 +34,12 @@
 <section class="card" id="nightcity">
   <div class="card__title">FILE 05 — NIGHT CITY (POST-LATAM)</div>
   
-  <div class="evidence" style="margin-top:10px">
-    <div class="evidence__cap mono">
-      STATUS: ACTIVE (UNVERIFIED) // LOCATION: NIGHT CITY // LAST UPDATE: 2076-04-02
-    </div>
+  <div class="evidence">
+  <img src="assets/city.jpg" alt="city">
+  <div class="evidence__cap mono">
+    ЧУИ, Я ДОМА - 2076 год.
   </div>
+</div>
 
 
   
