--- a/nightcity.html
+++ b/nightcity.html
@@ -64,7 +64,7 @@
   </p>
 
   <p>
-    За это я получил: вход в город, первые необходимые импланты, и шанс не умереть в ближайшие недели - новые бля возможности.
+    За это я получил: вход в город, первые необходимые импланты, и шанс не умереть в ближайшие недели.<br> Новые, блять, возможности.<br>
     Обмен воздуха на данные хах.
   </p>
 
@@ -74,7 +74,7 @@
   </div>
 
   <p style="margin-top:14px">
-    Первые месяцы - мелкие и грязыне контракты. Улицы - продолжение сточных канав, а каналы заполнены бедностью. Запах той самой свободы. Романтика бля.
+    Первые месяцы - мелкие и грязыне контракты. Улицы - продолжение сточных канав, а каналы заполнены бедностью. Запах той самой свободы.<br> Романтика бля.
   </p>
 
   <p>
@@ -83,7 +83,7 @@
 
   <p>
     Я лечил, таскал, прикрывал, иногда - просто был рядом. Ничего особого, даже проще чем было раньше. Но....
-    Деньги уходили быстрее, чем приходили. Импланты держались на честном слове и ПО постоянно отъёбывало. Как то пришел я к рипперу, а он говорит - че оно у тебя висит как чучело?
+    Деньги уходили быстрее, чем приходили.<br> Импланты держались на честном слове и ПО постоянно отъёбывало.<br> Как то пришел я к рипперу, а он говорит - "че оно у тебя висит как чучело?".
   </p>
 
   <hr class="sep">
@@ -94,19 +94,19 @@
   </div>
 
   <p style="margin-top:14px">
-    Не уснули? А стало хуже... Данные начали всплывать - не напрямую, а обрывками про корпу хуё-маё.
+    Не уснули? А стало хуже... Данные начали всплывать - не напрямую, а обрывками про корпу хуё-маё.<br>
     Слишком много корпораций вдруг "узнали" обо мне.
   </p>
 
   <p>
-    Если бы не Ирен - я бы даже не понял, что меня уже почти стерли.
-    Она и ЛикНьюс: подчистили хвосты, сломали цепочки, сожгли зеркала. Я им должен жпоу за спасение теперь. Хотя только Ирен... Она вроде ничего такая. Только француз...
+    Если бы не Ирен - я бы даже не понял, что меня уже почти стерли.<br>
+    Она и ЛикНьюс: подчистили хвосты, сломали цепочки, сожгли зеркала. Я им должен жпоу за спасение теперь.<br> Хотя только Ирен... Она вроде ничего такая. Только француз...
   </p>
 
   <div class="note" style="margin-top:12px">
     <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
     <div class="note__body">
-      Я тогда впервые понял, что один я здесь не выживу. Спасибо вам.
+      Я тогда впервые понял, что один я здесь не выживу. Спасибо...
     </div>
   </div>
 
@@ -118,12 +118,12 @@
   </div>
 
   <p style="margin-top:14px">
-    Биоскульптинг был не про красоту. И не про новую жизнь.
+    Биоскульптинг был не про красоту. И не про новую жизнь.<br>
     Это было: стереть старое лицо, стереть старые маркеры, стереть «Эллиса Вейла из Novimmune».
   </p>
 
   <p>
-    Когда я увидел себя после - я ничего не почувствовал.
+    Когда я увидел себя после - я ничего не почувствовал.<br>
     Ни радости. Ни отвращения. Просто: это больше не я. И, может быть, так лучше.
   </p>
 
@@ -135,7 +135,7 @@
   </div>
 
   <p style="margin-top:14px">
-    От СМИ слишком много крика, грязи и мало толку. Каждый утюг орёт, каждый канал врёт по-своему.
+    От СМИ слишком много крика, грязи и мало толку. Каждый утюг орёт, каждый канал врёт по-своему.<br>
     Я решил, что могу лучше. Тише. Точнее. Анонимно.
   </p>
 
@@ -152,7 +152,7 @@
   </div>
 
   <p style="margin-top:14px">
-    Инквизиторы. Что-что, а стирать умеют. Особенно что касается лично их.
+    Инквизиторы. Что-что, а стирать умеют. Особенно что касается лично их.<br>
     Базы нет. Архивов нет. И что хуже - все данные обо мне они забрали с собой.
   </p>
 
@@ -168,18 +168,18 @@
   </div>
 
   <p style="margin-top:14px">
-    Контракт на слежку я сначала не воспринял всерьёз. Обычное промышленное наблюдение: Кэс Хэйвен.
+    Контракт на слежку я сначала не воспринял всерьёз.<br> Обычное промышленное наблюдение: Кэс Хэйвен.
     Я не знал её. Она не знала меня.
   </p>
 
   <p>
-    Забавно, что в это же время ей пришёл заказ - следить за мной.
+    Забавно, что в это же время ей пришёл заказ - следить за мной.<br>
     Мы оба об этом узнали позже...
   </p>
 
   <p>
-    Когда нас блять окружила толпа ебанных мальстрёмов. Узкий квартал. Ошибка в тайминге.
-    Если бы не совместная работа - нас бы знатно распидорило по асфальту, что мать родная не узнала.
+    Когда нас блять окружила толпа ебанных мальстрёмов. Узкий квартал. Ошибка в тайминге.<br>
+    Если бы не совместная работа - нас бы знатно распидорило по асфальту так, что мать родная не узнала (или мать того мальстрёма, что чуть не обнулил меня. захаживал я к ней кхм).
   </p>
 
   <div class="note" style="margin-top:12px">
@@ -214,7 +214,7 @@
 
   <h3 class="h">ФИНАНСИРОВАНИЕ ВЫЖИВАНИЯ</h3>
   <p>
-    Вероятный источник средств: утечка чувствительных данных через сторонние каналы.
+    Вероятный источник средств: утечка чувствительных данных через сторонние каналы.<br>
     Прямая продажа невозможна (высокий риск обнаружения и устранения).
   </p>
 
